--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is my home portal page" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
     <title>Home portal</title>
   </head>
   <body>
@@ -15,7 +17,7 @@
     <main>
       <h2>WDD 230: Assignment Portal</h2>
       <ul>
-        <li>Lesson 02: <a href="#">Tile</a></li>
+        <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03: <a href="#">Tile</a></li>
         <li>Lesson 04: <a href="#">Tile</a></li>
         <li>Lesson 05: <a href="#">Tile</a></li>
