--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <h2>WDD 230: Assignment Portal</h2>
       <ul>
         <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Lesson 03: <a href="lesson3/">Uruguayan Chamber of Commerce</a></li>
-        <li>Lesson 04: <a href="#">Tile</a></li>
+        <li>Lesson 03: <a href="lesson3/">Uruguayan Chamber of Commerce Site plan</a></li>
+        <li>Lesson 04: <a href="chamber/">Uruguayan Chamber of Commerce</a></li>
         <li>Lesson 05: <a href="#">Tile</a></li>
         <li>Lesson 06: <a href="#">Tile</a></li>
         <li>Lesson 07: <a href="#">Tile</a></li>
