favicon icon added

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/medium.css"/>
         <link rel="stylesheet" href="styles/large.css">
+        <link rel="icon" href="favicon.ico">
         <title>Uruguayan Chamber of commerce</title>
     </head>
     <body>
