--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="myFavicon.ico">
     <title>Home portal</title>
   </head>
   <body>
