--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li>Lesson 10: <a href="#">Tile</a></li>
         <li>Lesson 11: <a href="#">Tile</a></li>
       </ul>
-      <a href="https://codepen.io/agustin-pariente/pen/JjBbNPL">codepen link</a>
+      <a href="https://codepen.io/agustin-pariente/pen/JjBbNPL">codepen link <br></a>
       <a href="js_practice/bom.html">JS books and chapters</a>
     </main>
     <hr>
