New info added for each section

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,36 +27,62 @@
                 </ul>
             </nav>
             <p id="date"></p>
-
         </header>
         
         <main>
-            <div id="hero">
-                <p>Hero with site name and call to action</p>
+            <div id="join-us">
+                <h2>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2>
             </div>
-            <div id="event">
-                <p>Event</p>
-            </div>
-            <div id="weather">
-                <p>Weather</p>
-            </div>
-            <div id="new-release">
-                <p>News Release</p>
-            </div>
-            <div id="join">
-                <p>join</p>
-            </div>
-            <div id="spotlight">
-                <div>
-                    <p>Spotlight 1</p>
+            <div class="container" >
+                <div id="hero">
+                    <img id="montevideo-coast" src="images/Uruguay.jpg" alt="South coast of Uruguay">
+                    <h2 id="welcome-title" >Welcome to Uruguayan Chamber of Commerce</h2>
                 </div>
-                <div>
-                    <p>Spotlight 2</p>
+                <div id="event">
+                    <h2>Next event</h2>
+                    <img id="expo" src="images/expo.png" alt="Event Expo Uruguay">
+                    <h4>June 8 to 11, 2023</h4>
+                    <h4>&#x1F4CD;Velodromo Municipal<h4>
                 </div>
-                <div id="spotlight-3">
-                    <p>Spotlight 3</p>
+                <div id="weather">
+                    <h2>Weather</h2>
+                    <img id="weather-img" src="images/weather.png" alt="Weather image"> 
+                    <h2>Partly Cloudy</h2>
+                    <h2>15°C</h2>
+                    <hr>
+                    <p>Wind Speed:      4 km/h</p>
+                    <p>Wind Chill:      N/A</p>
+                </div>
+                <div id="new-release">
+                    <p>Uruguayan Chamber of commerce New Initiatives for Business Community <br>
+                        The Uruguayan Chamber of Commerce is excited to announce new initiatives with the purpose of growth and collaboration within the local business community.<br>
+                        The initiatives include:<br>
+                        <br>                 
+                        <span id="initiatives">1.Business Networking Events: Connect with industry professionals and explore new business opportunities.<br>                       
+                        2.Educational Workshops and Seminars: Gain valuable insights and enhance your business skills.<br>                       
+                        3.Advocacy for Business Interests: We champion favorable business regulations and policies.</span>
+                    </p>
+                </div>
+                <div id="join">
+                    <a href="#" target="_blank"><button id="join-button">Join Us!</button></a>
+                    <h4>Discover how to join the Chamber of commerce and how it will benefit your organization</h4>
+                </div>
+                <div id="spotlight">
+                    <div id="spotlight-1">
+                        <h4 id="restaurant-text">The best pizza you'll taste<br>"Il Mondo Della Pizza"</h4>
+                        <img id="restaurant" src="images/restaurant.jpg" alt="Restaurant">
+                    </div>
+                    <div id="spotlight-2">
+                        <h4 id="restaurant-text">Looking for comfort when traveling?<br>"EGA"</h4>
+                        <img id="restaurant" src="images/transport.jpg" alt="Transport bus">
+                    </div>
+                    <div id="spotlight-3">
+                        <h4 id="restaurant-text">A place to exchange and keep your money safe<br>"Abitab"</h4>
+                        <img id="restaurant" src="images/currency_exchange.jpg" alt="Currency exchange local">
+                    </div>
                 </div>
             </div>
+            
         </main>
         <footer>
             <div id="info-footer">
