--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>Lesson 04: <a href="chamber/">Uruguayan Chamber of Commerce</a></li>
         <li>Lesson 05: <a href="#">Tile</a></li>
         <li>Lesson 06: <a href="#">Tile</a></li>
-        <li>Lesson 07: <a href="#">Tile</a></li>
+        <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy load images</a></li>
         <li>Lesson 08: <a href="#">Tile</a></li>
         <li>Lesson 09: <a href="#">Tile</a></li>
         <li>Lesson 10: <a href="#">Tile</a></li>
