--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -10,6 +10,7 @@
 <body>
     <main>
         <table>
+            <caption>Table 1: Account Feature Comparison</caption>
             <thead>
                 <tr>
                     <th colspan="4" id="th-title">ACME Wildwest Services</th>
