Prophets cards added

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <img src="images/Uruguayan1.png" alt="Logo image"/>
+            <img src="placeHolder.jpg" data-src="images/Uruguayan1.png" alt="Logo image"/>
             <nav>
                 <div id="menu">
                     <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" src="images/facebook.png" alt="Facebook icon"></a>
@@ -35,18 +35,18 @@
             </div>
             <div class="container" >
                 <div id="hero">
-                    <img id="montevideo-coast" src="images/Uruguay.jpg" alt="South coast of Uruguay">
+                    <img id="montevideo-coast" src="placeHolder.jpg" data-src="images/wdd230-org.jpg" alt="South coast of Uruguay">
                     <h2 id="welcome-title" >Welcome to Uruguayan Chamber of Commerce</h2>
                 </div>
                 <div id="event">
                     <h2>Next event</h2>
-                    <img id="expo" src="images/expo.png" alt="Event Expo Uruguay">
+                    <img id="expo" src="placeHolder.jpg" data-src="images/expo.png" alt="Event Expo Uruguay">
                     <h4>June 8 to 11, 2023</h4>
                     <h4>&#x1F4CD;Velodromo Municipal<h4>
                 </div>
                 <div id="weather">
                     <h2>Weather</h2>
-                    <img id="weather-img" src="images/weather.png" alt="Weather image"> 
+                    <img id="weather-img" src="placeHolder.jpg" data-src="images/weather.png" alt="Weather image"> 
                     <h2>Partly Cloudy</h2>
                     <h2>15°C</h2>
                     <hr>
@@ -70,15 +70,15 @@
                 <div id="spotlight">
                     <div id="spotlight-1">
                         <h4 id="restaurant-text">The best pizza you'll taste<br>"Il Mondo Della Pizza"</h4>
-                        <img id="restaurant" src="images/restaurant.jpg" alt="Restaurant">
+                        <img id="restaurant" src="placeHolder.jpg" data-src="images/restaurant.jpg" alt="Restaurant">
                     </div>
                     <div id="spotlight-2">
                         <h4 id="restaurant-text">Looking for comfort when traveling?<br>"EGA"</h4>
-                        <img id="restaurant" src="images/transport.jpg" alt="Transport bus">
+                        <img id="restaurant" src="placeHolder.jpg" data-src="images/transport.jpg" alt="Transport bus">
                     </div>
                     <div id="spotlight-3">
                         <h4 id="restaurant-text">A place to exchange and keep your money safe<br>"Abitab"</h4>
-                        <img id="restaurant" src="images/currency_exchange.jpg" alt="Currency exchange local">
+                        <img id="restaurant" src="placeHolder.jpg" data-src="images/currency_exchange.jpg" alt="Currency exchange local">
                     </div>
                 </div>
             </div>
