weather API added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy load images</a></li>
         <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Build</a></li>
         <li>Lesson 09: <a href="lesson9/prophets.html">Prophets</a></li>
-        <li>Lesson 10: <a href="#">Tile</a></li>
+        <li>Lesson 10: <a href="lesson10/weather-api.html">weather-api</a></li>
         <li>Lesson 11: <a href="#">Tile</a></li>
       </ul>
       <a href="https://codepen.io/agustin-pariente/pen/JjBbNPL">codepen link <br></a>
