wind chill added

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <img src="placeHolder.jpg" data-src="images/Uruguayan1.png" alt="Logo image"/>
+            <img src="#" data-src="images/logo_image.webp" alt="Logo image"/>
             <nav>
                 <div id="menu">
                     <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" src="images/facebook.png" alt="Facebook icon"></a>
@@ -35,23 +35,31 @@
             </div>
             <div class="container" >
                 <div id="hero">
-                    <img id="montevideo-coast" src="placeHolder.jpg" data-src="images/wdd230-org.jpg" alt="South coast of Uruguay">
+                    <picture>
+                        <source id="main_img_large" src="#" srcset="images/main_large.jpg" media="(min-width: 60.5em)">
+                        <source id="main_img_medium" src="#" srcset="images/main_medium.jpg" media="(min-width: 37.5em)">
+                        <img id="main_img_small" src="#" data-src="images/main_small.jpg" alt="South coast of Uruguay">
+                    </picture>
+                    <h3 class="label-overlay large">Large</h3>
+                    <h3 class="label-overlay medium">Medium</h3>
+                    <h3 class="label-overlay small">Small</h3>
+                                        
                     <h2 id="welcome-title" >Welcome to Uruguayan Chamber of Commerce</h2>
                 </div>
                 <div id="event">
                     <h2>Next event</h2>
-                    <img id="expo" src="placeHolder.jpg" data-src="images/expo.png" alt="Event Expo Uruguay">
+                    <img id="expo" src="#" data-src="images/expo.png" alt="Event Expo Uruguay">
                     <h4>June 8 to 11, 2023</h4>
-                    <h4>&#x1F4CD;Velodromo Municipal<h4>
+                    <h4>&#x1F4CD;Velodromo Municipal</h4>
                 </div>
                 <div id="weather">
                     <h2>Weather</h2>
-                    <img id="weather-img" src="placeHolder.jpg" data-src="images/weather.png" alt="Weather image"> 
+                    <img id="weather-img" src="#" data-src="images/weather.png" alt="Weather image"> 
                     <h2>Partly Cloudy</h2>
-                    <h2>15°C</h2>
+                    <h2><span type="number" id="temperature">10</span> °C</h2>
                     <hr>
-                    <p>Wind Speed:      4 km/h</p>
-                    <p>Wind Chill:      N/A</p>
+                    <p>Wind Speed:      <span type="number" id="windspeed">5</span> km/h</p>
+                    <p>Wind Chill:      <span type="number" id="windchill"></span></p>
                 </div>
                 <div id="new-release">
                     <p>Uruguayan Chamber of commerce New Initiatives for Business Community <br>
@@ -70,15 +78,15 @@
                 <div id="spotlight">
                     <div id="spotlight-1">
                         <h4 id="restaurant-text">The best pizza you'll taste<br>"Il Mondo Della Pizza"</h4>
-                        <img id="restaurant" src="placeHolder.jpg" data-src="images/restaurant.jpg" alt="Restaurant">
+                        <img id="restaurant" src="#" data-src="images/restaurant.jpg" alt="Restaurant">
                     </div>
                     <div id="spotlight-2">
                         <h4 id="restaurant-text">Looking for comfort when traveling?<br>"EGA"</h4>
-                        <img id="restaurant" src="placeHolder.jpg" data-src="images/transport.jpg" alt="Transport bus">
+                        <img id="restaurant" src="#" data-src="images/transport.jpg" alt="Transport bus">
                     </div>
                     <div id="spotlight-3">
                         <h4 id="restaurant-text">A place to exchange and keep your money safe<br>"Abitab"</h4>
-                        <img id="restaurant" src="placeHolder.jpg" data-src="images/currency_exchange.jpg" alt="Currency exchange local">
+                        <img id="restaurant" src="#" data-src="images/currency_exchange.jpg" alt="Currency exchange local">
                     </div>
                 </div>
             </div>
@@ -86,7 +94,7 @@
         </main>
         <footer>
             <div id="info-footer">
-                <img id="footer-img" src="images/Uruguayan1.png" alt="Logo image"/>
+                <img id="footer-img" src="#" data-src="images/Uruguayan1.png" alt="Logo image"/>
                 <p>info@uruguayanchamber.org <br> +(123) 1234-5678 <br> &#x1F4CD; Location Map</p>
             </div>
             
@@ -98,4 +106,5 @@
 
     </body>
     <script src="scripts/script.js"></script>
+    <script src="scripts/windchill.js"></script>
 </html>
