--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -14,8 +14,8 @@
         <img data-src="images/logo_image.webp" alt="Logo image"/>
         <nav>
             <div id="menu">
-                <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" src="images/facebook.png" alt="Facebook icon"></a>
-                <a id="alinkedin" href="https://www.linkedin.com" target="_blank"><img class="linkedin" src="images/linkedin.png" alt="Linkedin icon"></a>
+                <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" data-src="images/facebook.png" alt="Facebook icon"></a>
+                <a id="alinkedin" href="https://www.linkedin.com" target="_blank"><img class="linkedin" data-src="images/linkedin.png" alt="Linkedin icon"></a>
                 <h3>Menu</h3>
                 <button id="button">&#9776;</button>
             </div>
