--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,15 +15,15 @@
             <img src="#" data-src="images/logo_image.webp" alt="Logo image"/>
             <nav>
                 <div id="menu">
-                    <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" src="images/facebook.png" alt="Facebook icon"></a>
-                    <a id="alinkedin" href="https://www.linkedin.com" target="_blank"><img class="linkedin" src="images/linkedin.png" alt="Linkedin icon"></a>
+                    <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" src="#" data-src="images/facebook.png" alt="Facebook icon"></a>
+                    <a id="alinkedin" href="https://www.linkedin.com" target="_blank"><img class="linkedin" src="#" data-src="images/linkedin.png" alt="Linkedin icon"></a>
                     <h3>Menu</h3>
                     <button id="button">&#9776;</button>
                 </div>
                 <ul class="nav-ul">
                     <li><a href="index.html">Home</a></li>
                     <li><a target="_blank" href="discover.html">Discover</a></li>
-                    <li><a href="design.html">Design</a></li>
+                    <li><a target="_blank" href="join.html">Join</a></li>
                 </ul>
             </nav>
             <p id="date"></p>
