--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/large.css">
     <title>Discover</title>
 </head>
-<body>
+<body class="discover-body">
     <header>
         <img data-src="images/logo_image.webp" alt="Logo image"/>
         <nav>
@@ -22,7 +22,7 @@
             <ul class="nav-ul">
                 <li><a href="index.html">Home</a></li>
                 <li><a target="_blank" href="discover.html">Discover</a></li>
-                <li><a href="design.html">Design</a></li>
+                <li><a target="_blank" href="join.html">Join</a></li>
             </ul>
         </nav>
         <p id="date"></p>
