--- a/chamber/join.html
+++ b/chamber/join.html
@@ -22,7 +22,7 @@
             <ul class="nav-ul">
                 <li><a href="index.html">Home</a></li>
                 <li><a target="_blank" href="discover.html">Discover</a></li>
-                <li><a href="join.html">Join</a></li>
+                <li><a target="_blank" href="join.html">Join</a></li>
             </ul>
         </nav>
         <p id="date"></p>
