directory page added

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -16,7 +16,6 @@
             <div id="menu">
                 <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" data-src="images/facebook.png" alt="Facebook icon"></a>
                 <a id="alinkedin" href="https://www.linkedin.com" target="_blank"><img class="linkedin" data-src="images/linkedin.png" alt="Linkedin icon"></a>
-                <h3>Menu</h3>
                 <button id="button">&#9776;</button>
             </div>
             <ul class="nav-ul">
@@ -28,7 +27,7 @@
         <p id="date"></p>
         
     </header>
-    <main id="discover-main">
+    <main class="center-main">
         <div id="last-day">
             <h4 id="storage-day"></h4>
         </div>
