--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,6 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a target="_blank" href="discover.html">Discover</a></li>
                 <li><a target="_blank" href="join.html">Join</a></li>
+                <li><a target="_blank" href="directory.html">Directory</a></li>
             </ul>
         </nav>
         <p id="date"></p>
