--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Build</a></li>
         <li>Join site assignment: <a href="chamber/join.html">Join</a></li>
         <li>Lesson 09: <a href="lesson9/prophets.html">Prophets</a></li>
-        <li>Directory site assignment: <a href="chamber/directory.html">Join</a></li>
+        <li>Directory site assignment: <a href="chamber/directory.html">Directory</a></li>
         <li>Lesson 10: <a href="lesson10/weather-api.html">weather-api</a></li>
         <li>Lesson 11: <a href="#">Tile</a></li>
       </ul>
