--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -28,7 +28,7 @@
         <p id="date"></p>
         
     </header>
-    <main class="center-main">
+    <main class="discover-main">
         <div id="last-day">
             <h4 id="storage-day"></h4>
         </div>
