--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,11 +45,11 @@
                 </div>
                 <div id="weather">
                     <h2>Weather</h2>
-                    <img id="weather-img" src="#" data-src="images/weather.png" alt="Weather image"/> 
-                    <h2>Partly Cloudy</h2>
-                    <h2><span type="number" id="temperature">10</span> °C</h2>
+                    <img id="weather-img" src="#" data-src="" alt="Weather image"/> 
+                    <h2 id="figcaption"></h2>
+                    <h2><span type="number" id="temperature"></span> °F</h2>
                     <hr>
-                    <p>Wind Speed:      <span type="number" id="windspeed">5</span> km/h</p>
+                    <p>Wind Speed:      <span type="number" id="windspeed"></span> miles/h</p>
                     <p>Wind Chill:      <span type="number" id="windchill"></span></p>
                 </div>
                 <div id="new-release">
