--- a/chamber/join.html
+++ b/chamber/join.html
@@ -48,7 +48,7 @@
                 <label class="side"><input type="radio" name="membershipLevel" value="Silver Membership">3. Silver Membership.</label>
                 <label class="side"><input type="radio" name="membershipLevel" value="Gold Membership">4. Gold Membership</label>
 
-                <label><input id="formDate" type="hidden" name="DateAndTime"></label>
+                <label><input id="formDate" type="hidden" name="DateAndTime" value=""></label>
             </fieldset>
             <label><input class="submitButton" type="submit" name="submitButton" value="Join Uruguayan Chamber"></label>
         </form>
