--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,7 +63,7 @@
                     </p>
                 </div>
                 <div id="join">
-                    <a href="#" target="_blank"><button id="join-button">Join Us!</button></a>
+                    <a href="join.html" target="_blank"><button id="join-button">Join Us!</button></a>
                     <h4>Discover how to join the Chamber of commerce and how it will benefit your organization</h4>
                 </div>
                 <div id="spotlight">
