--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -24,13 +24,14 @@
                 <li><a target="_blank" href="discover.html">Discover</a></li>
                 <li><a target="_blank" href="join.html">Join</a></li>
                 <li><a target="_blank" href="directory.html">Directory</a></li>
+                <li><a target="_blank" href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <p id="date"></p>
     </header>
     <main>
         <div class="thanks">
-            <h1>Thank you!<br> you have submitted the form successfully<br>Welcome to the Uruguayan Chamber of Commerce community</h1>
+            <h1>Thank you!<br> you have submitted the form successfully<br></h1>
         </div>
     </main>
     <footer>
