--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,6 +23,7 @@
                 <li><a target="_blank" href="discover.html">Discover</a></li>
                 <li><a target="_blank" href="join.html">Join</a></li>
                 <li><a target="_blank" href="directory.html">Directory</a></li>
+                <li><a target="_blank" href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <p id="date"></p>
