--- a/chamber/join.html
+++ b/chamber/join.html
@@ -23,12 +23,13 @@
                 <li><a target="_blank" href="discover.html">Discover</a></li>
                 <li><a target="_blank" href="join.html">Join</a></li>
                 <li><a target="_blank" href="directory.html">Directory</a></li>
+                <li><a target="_blank" href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <p id="date"></p>
     </header>
-    <main>
-        <h1>Uruguayan Chamber application</h1>
+    <main class="join-main">
+        <h1 class="join-application">Uruguayan Chamber application</h1>
         <form method="get" action="thanks.html">
             <fieldset>
                 <legend>Application information</legend>
