--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
         <li>Lesson 05: <a href="#">Tile</a></li>
         <li>Lesson 06: <a href="#">Tile</a></li>
         <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy load images</a></li>
-        <li>Discover site assignment: <a href="chamber/discover.html">Discover</a></li>
         <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Build</a></li>
-        <li>Join site assignment: <a href="chamber/join.html">Join</a></li>
         <li>Lesson 09: <a href="lesson9/prophets.html">Prophets</a></li>
-        <li>Directory site assignment: <a href="chamber/directory.html">Directory</a></li>
         <li>Lesson 10: <a href="lesson10/weather-api.html">weather-api</a></li>
-        <li>Lesson 11: <a href="#">Tile</a></li>
+        <li>Lesson 11: <a href="chamber/">Uruguayan Chamber of Commerce</a></li>
       </ul>
       <a href="https://codepen.io/agustin-pariente/pen/JjBbNPL">codepen link <br></a>
       <a href="js_practice/bom.html">JS books and chapters</a>
