--- a/chamber/join.html
+++ b/chamber/join.html
@@ -51,7 +51,7 @@
 
                 <label><input id="formDate" type="hidden" name="DateAndTime" value=""></label>
             </fieldset>
-            <label><input class="submitButton" type="submit" name="submitButton" value="Join Uruguayan Chamber"></label>
+            <label><input class="submitButton" type="submit" name="submitButton" value="Join Chamber"></label>
         </form>
     </main>
     <footer>
