--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css"/>
     <link rel="stylesheet" href="styles/large.css">
+    <link rel="icon" href="myFavicon.ico">
     <title>Discover</title>
 </head>
 <body class="discover-body">
     <header>
-        <img data-src="images/logo_image.webp" alt="Logo image"/>
+        <a href="index.html"><img src="#" data-src="images/logo_image.webp" alt="Logo image"/></a>
         <nav>
             <div id="menu">
                 <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" data-src="images/facebook.png" alt="Facebook icon"></a>
