--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/medium.css"/>
         <link rel="stylesheet" href="styles/large.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="myFavicon.ico">
         <title>Uruguayan Chamber of commerce</title>
     </head>
     <body>
         <header>
-            <img src="#" data-src="images/logo_image.webp" alt="Logo image"/>
+            <a href="index.html"><img src="#" data-src="images/logo_image.webp" alt="Logo image"/></a>
             <nav>
                 <div id="menu">
                     <a id="afacebook" href="https://www.facebook.com" target="_blank"><img class="facebook" src="#" data-src="images/facebook.png" alt="Facebook icon"></a>
