--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li>Lesson 09: <a href="lesson9/prophets.html">Prophets</a></li>
         <li>Lesson 10: <a href="lesson10/weather-api.html">weather-api</a></li>
         <li>Lesson 11: <a href="chamber/">Uruguayan Chamber of Commerce</a></li>
+        <li>Lesson 11: <a href="bountiful/">Bountiful Foods</a></li>
       </ul>
     </main>
     <hr>
